# machine-gaze

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docer-compose.yml  docker-compose.gpu.yml  docker-compose.yml
.agent/: CONTINUITY.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/backend/: __init__.py  app.py  cleanup.py  database.py  models.py  schemas.py  security.py  service.py  settings.py  storage.py
backend/tests/: test_api.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/backend/admin/sessions/: route.ts
frontend/app/api/backend/health/: route.ts
frontend/app/api/backend/sessions/: route.ts
frontend/app/api/backend/sessions/[sessionId]/: route.ts
frontend/app/api/backend/sessions/[sessionId]/finish/: route.ts
frontend/app/api/backend/sessions/[sessionId]/preview/: route.ts
frontend/app/api/backend/sessions/[sessionId]/upload/: route.ts
frontend/app/upload/[sessionId]/: page.tsx
frontend/components/: gaze-mark.tsx  operator-controls.tsx  photo-preview.tsx  processing-panel.tsx  qr-card.tsx  result-report.tsx  session-timeline.tsx  status-pill.tsx  upload-form.tsx
frontend/lib/: backend-api.ts  backend-proxy.ts  booth-demo.ts  session-mapping.ts
inference/: Dockerfile  README.md  pyproject.toml
inference/src/inference/: __init__.py  analyzer.py  contracts.py  prompts.py  settings.py  worker.py
inference/tests/: test_analyzer.py  test_contracts.py  test_worker.py
scripts/: run-dev.sh
