[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youssef Abdelrahim", email = "youssefezzatw@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
]

[project.scripts]
inference = "inference:main"
inference-worker = "inference.worker:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
gpu = [
    "accelerate>=1.12.0",
    "huggingface-hub>=1.2.1",
    "json-repair>=0.54.2",
    "safetensors>=0.7.0",
    "torch>=2.7.0",
    "transformers>=4.57.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
